Replace new Integer with Integer.valueOf for sonar reports